Add new theme; tweak Makefile

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://scientific-python.org"
+baseURL = "https://scientific-python.org"
 languageCode = "en-us"
 title = "Scientific Python"
-theme = "ananke"
+theme = "mainroad"
