--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://scientific-python.org"
 languageCode = "en-us"
-title = "Scientific Python :: Ecosystem Coordination"
+title = "Scientific Python Ecosystem"
 theme = "mainroad"
 
