--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ theme = "mainroad"
 [Params.logo]
   title = "The Scientific Python Ecosystem" # Logo title, otherwise will use site title
   subtitle = "Planning for the next decade" # Logo subtitle
+  image = "img/ecosystem.svg" # Logo image. Path relative to "static"
 
 [menu]
   [[menu.main]]
