REVIEW ME: necessary to pick up theme for preview.

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Scientific Python Ecosystem"
 subtitle = "Planning for the next decade"
 theme = "mainroad"
 uglyurls = true
+relativeURLs=true
 
 [Params]
   mainSections = ["_index"]
