--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,14 @@ jobs:
       - run:
           # TODO: include --buildDrafts?
           name: Build site
-          command: hugo
+          command: |
+            sed -i '/theme/a uglyurls = true' config.toml
+            sed -i 's/\"\/\"/\"\/index.html\"/g' config.toml
+            sed -i 's/\/about/\/about.html/g' config.toml
+            sed -i 's/\/posts/\/posts.html/g' config.toml
+            sed -i 's/\/specs/\/specs.html/g' config.toml
+            sed -i 's/\/summits/\/summits.html/g' config.toml
+            hugo
 
       - store_artifacts:
           path: public/
