--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Scientific Python Ecosystem"
 subtitle = "Planning for the next decade"
 theme = "mainroad"
-relativeURLs=true
+#relativeURLs=true
 
 [Params]
   mainSections = ["_index"]
