Undo fix for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           name: Build site
           command: |
             sed -i '/theme/a uglyurls = true' config.toml
+            sed -i '/uglyurls/a relativeURLs=true' config.toml
             sed -i 's/\"\/\"/\"\/index.html\"/g' config.toml
             sed -i 's/\/about/\/about.html/g' config.toml
             sed -i 's/\/posts/\/posts.html/g' config.toml
