--- a/config.yaml
+++ b/config.yaml
@@ -33,8 +33,8 @@ languages:
         altText: A green tree on a white hill at the end of a green path in the shape of the letter 'S'.
         link: /
       navbar:
-        - title: About
-          url: /about/
+        - title: Ecosystem
+          url: /ecosystem/
         - title: Install
           url: /install/
         - title: SPECS
