Reorg and theme update

--- a/config.yaml
+++ b/config.yaml
@@ -35,8 +35,6 @@ languages:
       navbar:
         - title: Ecosystem
           url: /ecosystem/
-        - title: Install
-          url: /install/
         - title: SPECS
           url: /specs/
       hero:
@@ -57,15 +55,15 @@ languages:
 
       keyfeatures:
         features:
-        - title: Fundamental algorithms
+        - title: Built on Python
           text: SciPy provides algorithms for optimization, integration, interpolation, eigenvalue problems, algebraic equations, differential equations, statistics and many other classes of problems.
-        - title: Broadly applicable
+        - title: Extensive and high quality
           text: The algorithms and data structures provided by SciPy are broadly applicable across domains.
-        - title: Foundational
+        - title: Widely used in science
           text:  Extends NumPy providing additional tools for array computing and provides specialized data structures, such as sparse matrices and k-dimensional trees.
-        - title: Performant
+        - title: Loosely coordinated
           text: SciPy wraps highly-optimized implementations written in low-level languages like Fortran, C, and C++. Enjoy the flexibility of Python with the speed of compiled code.
-        - title: Easy to use
+        - title: Community / Open development
           text: SciPy's high level syntax makes it accessible and productive for programmers from any background or experience level.
         - title: Open source
           text: Distributed under a liberal [BSD license](https://github.com/scipy/scipy/blob/master/LICENSE.txt), SciPy is developed and maintained [publicly on GitHub](https://github.com/scipy/scipy) by a vibrant, responsive, and diverse [community](/dev-zone).
