--- a/config.yaml
+++ b/config.yaml
@@ -50,24 +50,24 @@ languages:
         # Hero image (from static/images/___)
         image: logo.svg
       news:
-        title: SciPy 1.7.1 released
+        title: SPECs announced
         content: 2021-08-01
         url: /posts
 
       keyfeatures:
         features:
         - title: Built on Python
-          text: SciPy provides algorithms for optimization, integration, interpolation, eigenvalue problems, algebraic equations, differential equations, statistics and many other classes of problems.
+          text: Python is an interpreted, dynamically typed, general purpose programming language that is very well suited for interactive work and quick prototyping, while being powerful enough to write large applications in.
         - title: Extensive and high quality
-          text: The algorithms and data structures provided by SciPy are broadly applicable across domains.
+          text: The scientific Python ecosystem contains many high quality libraries developed independently.
         - title: Widely used in science
-          text:  Extends NumPy providing additional tools for array computing and provides specialized data structures, such as sparse matrices and k-dimensional trees.
+          text: The ecosystem is widely used in scientific research and teaching.  It covers almost all domains.
         - title: Loosely coordinated
-          text: SciPy wraps highly-optimized implementations written in low-level languages like Fortran, C, and C++. Enjoy the flexibility of Python with the speed of compiled code.
+          text: The projects are independently run.
         - title: Community / Open development
-          text: SciPy's high level syntax makes it accessible and productive for programmers from any background or experience level.
+          text: Most projects are developed in the open by volunteers and some paid contributors.
         - title: Open source
-          text: Distributed under a liberal [BSD license](https://github.com/scipy/scipy/blob/master/LICENSE.txt), SciPy is developed and maintained [publicly on GitHub](https://github.com/scipy/scipy) by a vibrant, responsive, and diverse [community](/dev-zone).
+          text: Distributed under an open source license (e.g., [BSD license](https://github.com/scipy/scipy/blob/master/LICENSE.txt)), SciPy is developed and maintained publicly (e.g., on GitHub).
 
       section5: false
 
