Naming suggestion for "widely used" card.

--- a/config.yaml
+++ b/config.yaml
@@ -64,8 +64,8 @@ languages:
           text: Projects are developed by open communities composed primarily of the users of the software.
         - title: Extensive and high quality
           text: The scientific Python ecosystem comprises performant, well-tested libraries providing tools for computing across all scientific domains.
-        - title: Widely used in science
-          text: The ecosystem is widely used in scientific research and teaching.  It covers almost all domains.
+        - title: Broadly applicable
+          text: The ecosystem is widely used in scientific research and teaching.
         - title: Loosely coordinated
           text: The projects are independently run.
 
