--- a/config.yaml
+++ b/config.yaml
@@ -30,7 +30,7 @@ languages:
     languageName: English
     params:
       navbarlogo:
-        image: logo.svg
+        image: logo-banner.svg
         altText: A green tree on a white hill at the end of a green path in the shape of the letter 'S'.
         link: /
       navbar:
