--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/scientific-python-hugo-theme"]
 	path = themes/scientific-python-hugo-theme
 	url = git@github.com:scientific-python/scientific-python-hugo-theme.git
+[submodule "calendars/yaml2ics"]
+	path = calendars/yaml2ics
+	url = https://github.com/scientific-python/yaml2ics
