--- a/config.yaml
+++ b/config.yaml
@@ -79,6 +79,8 @@ languages:
       socialmedia:
       - link: https://github.com/scientific-python/
         icon: github
+      - link: https://www.youtube.com/channel/UC2wKi87Wmy9C1OQMyD9fGxA
+        icon: youtube
       quicklinks:
         column1:
           title: ""
