Add People tab to menu

--- a/config.yaml
+++ b/config.yaml
@@ -40,6 +40,9 @@ languages:
           url: /community/
         - title: SPECS
           url: /specs/
+        - title: People
+          url: /teams/
+
       hero:
         # Main hero title
         title: Scientific Python
