--- a/config.yaml
+++ b/config.yaml
@@ -30,8 +30,9 @@ languages:
     languageName: English
     params:
       navbarlogo:
-        image: logo-banner.svg
+        image: logo.svg
         altText: A green tree on a white hill at the end of a green path in the shape of the letter 'S'.
+        text: Scientific Python
         link: /
       navbar:
         - title: Ecosystem
