--- a/config.yaml
+++ b/config.yaml
@@ -32,6 +32,7 @@ languages:
       navbarlogo:
         image: logo.svg
         altText: A green tree on a white hill at the end of a green path in the shape of the letter 'S'.
+        text: Scientific Python
         link: /
       navbar:
         - title: Ecosystem
