--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
-[context.production.environment]
-  HUGO_VERSION = "0.88.1"
+[build.environment]
+  PYTHON_VERSION = "3.8"
+  HUGO_VERSION = "0.91.2"
