--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ languages:
         # Main hero title
         title: Scientific Python
         # Hero subtitle (optional)
-        subtitle: Community owned and developed
+        subtitle: Community developed, community owned
         # Button text
         buttontext: Get started
         # Where the main hero button links to
