--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,7 @@ markup:
     noClasses: false
 
 params:
+  description: Community developed and owned ecosystem for Scientific Computing
   images:
   - /images/logo.svg
   plausible:
