--- a/config.yaml
+++ b/config.yaml
@@ -21,12 +21,6 @@ params:
     vars:
       highlightColor: '#004811'
       menuHighlightColor: '#5ca038'
-  widgets:
-    social:
-      github: scientific-python
-      custom:
-        - title: Youtube
-          url: 'https://www.youtube.com/channel/UC2wKi87Wmy9C1OQMyD9fGxA'
 
 languages:
   en:
@@ -87,7 +81,7 @@ languages:
         icon: youtube
       - link: https://facebook.com/scientific.python
         icon: facebook
-      - link: https://twitter.com/scipy_ecosystem
+      - link: https://twitter.com/scientific_py
         icon: twitter
       quicklinks:
         column1:
