--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build.environment]
   PYTHON_VERSION = "3.8"
-  HUGO_VERSION = "0.91.2"
+  HUGO_VERSION = "0.92.1"
+
+[[plugins]]
+  package = "netlify-plugin-checklinks"
