Add community calendars page
The calendar list is rendered from the collection of yaml files under calendars.

--- a/config.yaml
+++ b/config.yaml
@@ -102,6 +102,8 @@ languages:
           links:
             - text: SPECs
               link: /specs/
+            - text: Calendars
+              link: /calendars
             - text: Grants
               link: /grants/
         column3:
