--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -5,45 +5,52 @@ events:
       The fortnightly NumPy community call.
 
       Meeting notes: https://hackmd.io/76o-IxCjQX2mOXO_wwkcpg
-    begin: 2021-10-27 08:30:00 -07:00
-    end: 2021-10-27 09:30:00 -07:00
+    begin: 2022-01-19 18:00:00 +00:00
+    end: 2022-01-19 19:00:00 +00:00
     url: https://berkeley.zoom.us/j/762261535
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 14
-      until: 2025-01-01 00:00:00 -07:00
+      until: 2025-01-01 00:00:00 +00:00
 
   - summary: NumPy Triage Call
     description: |
       The fortnightly NumPy development triage call.
 
       Meeting notes: https://hackmd.io/68i_JvOYQfy9ERiHgXMPvg
-    begin: 2021-10-20 09:30:00 -07:00
-    end: 2021-10-20 10:30:00 -07:00
+    begin: 2022-01-26 17:00:00 +00:00
+    end: 2022-01-26 18:00:00 +00:00
     url: https://berkeley.zoom.us/j/762261535
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 14
-      until: 2025-01-01 00:00:00 -07:00
+      until: 2025-01-01 00:00:00 +00:00
 
-  - summary: NumPy/SciPy Docs Call
+  - summary: NumPy Documentation Team meeting
     description: |
-      Hi everyone,
+      The fortnightly NumPy documentation team call.
 
-      This is the recurring meeting every 2 weeks for our NumPy & SciPy documentation team. Restarting from **Jan 4th 2021**.
-
-      Let's use the same HackMD doc for meeting notes each time: https://hackmd.io/oB_boakvRqKR-_2jRV-Qjg
-
-      Cheers,
-
-      Melissa
-    begin: 2021-11-08 08:00:00 -07:00
-    end: 2021-11-08 09:00:00 -07:00
+      Meeting notes: https://hackmd.io/oB_boakvRqKR-_2jRV-Qjg
+    begin: 2022-01-17 16:00:00 +00:00
+    end: 2022-01-17 17:00:00 +00:00
     url: https://zoom.us/j/96219574921?pwd=VTRNeGwwOUlrYVNYSENpVVBRRjlkZz09
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 14
-      until: 2025-01-01 00:00:00 -07:00
+      until: 2025-01-01 00:00:00 +00:00
+
+  - summary: NumPy Newcomers meeting
+    description: |
+      The fortnightly NumPy call for newcomers.
+
+    begin: 2022-01-17 16:00:00 +00:00
+    end: 2022-01-17 17:00:00 +00:00
+    url: https://us02web.zoom.us/j/87192457898
+    repeat:
+      interval:
+        # seconds, minutes, hours, days, weeks, months, years
+        days: 14
+      until: 2025-01-01 00:00:00 +00:00
