--- a/config.yaml
+++ b/config.yaml
@@ -76,17 +76,19 @@ params:
     socialmedia:
       # Find icon names at https://fontawesome.com/search
     - link: https://github.com/scientific-python/
-      icon: fa-brands fa-github
+      icon: github
     - link: https://www.youtube.com/channel/UC2wKi87Wmy9C1OQMyD9fGxA
-      icon: fa-brands fa-youtube
+      icon: youtube
     - link: https://twitter.com/scientific_py
-      icon: fa-brands fa-twitter
+      icon: twitter
     - link: https://facebook.com/scientific.python
-      icon: fa-brands fa-facebook
+      icon: facebook
     - link: https://www.instagram.com/scientific.python/
-      icon: fa-brands fa-instagram
+      icon: instagram
     - link: https://www.tiktok.com/@scientific.python
-      icon: fa-brands fa-tiktok
+      icon: tiktok
+    - link: https://discuss.scientific-python.org
+      icon: discourse
 
     quicklinks:
       column1:
