--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -1,4 +1,5 @@
 name: Matplotlib Community Calendar
+timezone:  Europe/Berlin
 events:
   - summary: Weekly Matplotlib Call
     description: |
@@ -8,11 +9,11 @@ events:
 
       Meeting notes: https://hackmd.io/@matplotlib
 
-    begin: 2022-03-10 20:00:00 +00:00
-    end: 2022-03-10 21:00:00 +00:00
+    begin: 2022-03-24 21:00:00
+    end: 2022-03-24 22:00:00
     url: https://zoom.us/j/384435716?pwd=WFpxVWxoYXArTDFzN1lWaHNoOE8xZz09
     repeat:
       interval:
         # seconds, minutes, hours, days, weeks, months, years
         days: 7
-      until: 2025-01-01 00:00:00 +00:00
+      until: 2025-01-01 00:00:00
